# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//xwalk/build/msbuild.gni")

msbuild("wifidirect_extension") {
  output_dir = root_out_dir
  output_name = "wifidirect_extension"
  project_path = "wifidirect_extension.csproj"
  sources = [
    "XWalkExtension.cs",
    "XWalkExtensionInstance.cs",
  ]
}
